--- a/activities/Pages/_Host.cshtml
+++ b/activities/Pages/_Host.cshtml
@@ -19,6 +19,11 @@
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
+    <style>
+        .UserMenu .mud-button-label {
+            color:white !important
+        }
+    </style>
 </head>
 <body>
     @{
