--- a/activities/Pages/Index.razor
+++ b/activities/Pages/Index.razor
@@ -26,6 +26,11 @@
         else
         {
             <div class="row">
+                <div class="col-md-12">
+                    <div class="@(TestEnabled ? "alert alert-danger" : "alert alert-info")">
+                        <MudSwitch @onclick="@((e)=>TestModeChanged())" Checked="@TestEnabled" Label="Enable Test Users mode" Color="Color.Error" />
+                    </div>
+                </div>
                 <div class="col-md-7">
                     <MudPaper Class="d-flex mud-width-full py-8 p-3">
                         <ul class="nav nav-pills">
@@ -136,6 +141,8 @@
 
 
 @code {
+    public bool TestEnabled { get; set; }
+
     private string GroupName;
     private string SortField;
     private IEnumerable<StatsModel>? stats;
@@ -157,8 +164,15 @@
 
                 languages = LanguagesLocalizer.GetAllStrings().ToDictionary(s => s.Name, s => s.Value);
                 activities = ActivitiesService.GetAll().ToDictionary(s => s.Id, s => s.Name);
-
-                await Task.Delay(1000);
+                try
+                {
+                    TestEnabled = await _ConfigService.GetTestsUserMode();
+                    StateHasChanged();
+                }
+                catch (Exception ex)
+                {
+                    TestEnabled = false;
+                }
 
                 await SetActiveTab("Country");
 
@@ -167,6 +181,12 @@
         }
 
 
+    }
+
+    private async Task TestModeChanged()
+    {
+        await _ConfigService.SetTestsUserMode(!TestEnabled);
+        TestEnabled = !TestEnabled;
     }
 
     public async Task SetActiveTab(string groupBy)
