--- a/activities/Pages/Index.razor
+++ b/activities/Pages/Index.razor
@@ -158,26 +158,30 @@
         if (authState.User.Identity.IsAuthenticated)
         {
             var userRole = authState?.User?.Claims.Where(c => c.Type == ClaimTypes.Role).FirstOrDefault();
-            if (userRole.Value.Contains("Admin"))
+            if (userRole != null)
             {
-                countries = CountriesLocalizer.GetAllStrings().ToDictionary(s => s.Name, s => s.Value);
-
-                languages = LanguagesLocalizer.GetAllStrings().ToDictionary(s => s.Name, s => s.Value);
-                activities = ActivitiesService.GetAll().ToDictionary(s => s.Id, s => s.Name);
-                try
+                if (userRole.Value.Contains("Admin"))
                 {
-                    TestEnabled = await _ConfigService.GetTestsUserMode();
-                    StateHasChanged();
-                }
-                catch (Exception ex)
-                {
-                    TestEnabled = false;
-                }
+                    countries = CountriesLocalizer.GetAllStrings().ToDictionary(s => s.Name, s => s.Value);
 
-                await SetActiveTab("Country");
+                    languages = LanguagesLocalizer.GetAllStrings().ToDictionary(s => s.Name, s => s.Value);
+                    activities = ActivitiesService.GetAll().ToDictionary(s => s.Id, s => s.Name);
+                    try
+                    {
+                        TestEnabled = await _ConfigService.GetTestsUserMode();
+                        StateHasChanged();
+                    }
+                    catch (Exception ex)
+                    {
+                        TestEnabled = false;
+                    }
 
-                top20 = await _profileService.Last20Registred();
+                    await SetActiveTab("Country");
+
+                    top20 = await _profileService.Last20Registred();
+                }
             }
+
         }
 
 
