restoring manage list / set strict to false in mudblazor autocomplete

--- a/activities/Pages/Index.razor
+++ b/activities/Pages/Index.razor
@@ -19,6 +19,13 @@
     <h1>Welcome</h1>
 
     <AuthorizeView Roles="Admin">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="@(TestEnabled ? "alert alert-danger" : "alert alert-info")">
+                    <MudSwitch @onclick="@((e)=>TestModeChanged())" Checked="@TestEnabled" Label="Enable Test Users mode" Color="Color.Error" />
+                </div>
+            </div>
+        </div>
         @if (stats == null)
         {
             <p>Loading ...</p>
@@ -26,13 +33,8 @@
         else
         {
             <div class="row">
-                <div class="col-md-12">
-                    <div class="@(TestEnabled ? "alert alert-danger" : "alert alert-info")">
-                        <MudSwitch @onclick="@((e)=>TestModeChanged())" Checked="@TestEnabled" Label="Enable Test Users mode" Color="Color.Error" />
-                    </div>
-                </div>
                 <div class="col-md-7">
-                    <MudPaper Class="d-flex mud-width-full py-8 p-3">
+                    <div class="col-md-12">
                         <ul class="nav nav-pills">
                             <li class="nav-item">
                                 <a class="nav-link @((GroupName == "Country") ? "active" : "")" @onclick='() => SetActiveTab("Country")' href="javascript:void(0)">Countries</a>
@@ -41,37 +43,40 @@
                                 <a class="nav-link @((GroupName == "Language") ? "active" : "")" @onclick='() => SetActiveTab("Language")' href="javascript:void(0)">Languages</a>
                             </li>
                         </ul>
-
-                        <table class="table">
-                            <thead>
-                                <tr>
-                                    <th> @GroupName <a class="  btn btn-xs @((SortField == "Name") ? " btn-primary" : "btn-secondary")" @onclick='() => SortBy("Name")'> <i class="oi oi-sort-ascending"></i> </a> </th>
-                                    <th> Total <a class="   btn btn-xs @((SortField == "Total") ? "btn-primary" : "btn-secondary")" @onclick='() => SortBy("Total")'> <i class="oi oi-sort-descending"></i> </a>  </th>
-                                    <th> Review <a class="   btn btn-xs @((SortField == "Review") ? "btn-primary" : "btn-secondary")" @onclick='() => SortBy("Review")'> <i class="oi oi-sort-descending"></i> </a>  </th>
-                                    <th> Approved <a class="   btn btn-xs @((SortField == "Approved") ? "btn-primary" : "btn-secondary")" @onclick='() => SortBy("Approved")'> <i class="oi oi-sort-descending"></i>  </a></th>
-
-                                    <th> Not Approved <a class="   btn btn-xs @((SortField == "Not Approved") ? "btn-primary" : "btn-secondary")" @onclick='() => SortBy("Not Approved")'><i class="oi oi-sort-descending"></i> </a>  </th>
-
-                                    <th> Member <a class="   btn btn-xs @((SortField == "Member") ? "btn-primary" : "btn-secondary")" @onclick='() => SortBy("Member")'> <i class="oi oi-sort-descending"></i> </a> </th>
-
-                                    <th> Available <a class="   btn btn-xs @((SortField == "Available") ? "btn-primary" : "btn-secondary")" @onclick='() => SortBy("Available")'> <i class="oi oi-sort-descending"></i> </a> </th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                @foreach (var s in stats)
-                                {
+                    </div>
+                    <MudPaper Class="d-flex mud-width-full py-8 p-3">
+                        <div class="col-md-12">
+                            <table class="table">
+                                <thead>
                                     <tr>
-                                        <td>@s.name</td>
-                                        <td>@s.total</td>
-                                        <td>@s.review</td>
-                                        <td>@s.approved</td>
-                                        <td>@s.notapproved</td>
-                                        <td>@s.member</td>
-                                        <td>@s.available</td>
+                                        <th> @GroupName <a class="  btn btn-xs @((SortField == "Name") ? " btn-primary" : "btn-secondary")" @onclick='() => SortBy("Name")'> <i class="oi oi-sort-ascending"></i> </a> </th>
+                                        <th> Total <a class="   btn btn-xs @((SortField == "Total") ? "btn-primary" : "btn-secondary")" @onclick='() => SortBy("Total")'> <i class="oi oi-sort-descending"></i> </a>  </th>
+                                        <th> Review <a class="   btn btn-xs @((SortField == "Review") ? "btn-primary" : "btn-secondary")" @onclick='() => SortBy("Review")'> <i class="oi oi-sort-descending"></i> </a>  </th>
+                                        <th> Approved <a class="   btn btn-xs @((SortField == "Approved") ? "btn-primary" : "btn-secondary")" @onclick='() => SortBy("Approved")'> <i class="oi oi-sort-descending"></i>  </a></th>
+
+                                        <th> Not Approved <a class="   btn btn-xs @((SortField == "Not Approved") ? "btn-primary" : "btn-secondary")" @onclick='() => SortBy("Not Approved")'><i class="oi oi-sort-descending"></i> </a>  </th>
+
+                                        <th> Member <a class="   btn btn-xs @((SortField == "Member") ? "btn-primary" : "btn-secondary")" @onclick='() => SortBy("Member")'> <i class="oi oi-sort-descending"></i> </a> </th>
+
+                                        <th> Available <a class="   btn btn-xs @((SortField == "Available") ? "btn-primary" : "btn-secondary")" @onclick='() => SortBy("Available")'> <i class="oi oi-sort-descending"></i> </a> </th>
                                     </tr>
-                                }
-                            </tbody>
-                        </table>
+                                </thead>
+                                <tbody>
+                                    @foreach (var s in stats)
+                                    {
+                                        <tr>
+                                            <td>@s.name</td>
+                                            <td>@s.total</td>
+                                            <td>@s.review</td>
+                                            <td>@s.approved</td>
+                                            <td>@s.notapproved</td>
+                                            <td>@s.member</td>
+                                            <td>@s.available</td>
+                                        </tr>
+                                    }
+                                </tbody>
+                            </table>
+                        </div>
                     </MudPaper>
 
                 </div>
