--- a/activities/Pages/ManageProfile.razor
+++ b/activities/Pages/ManageProfile.razor
@@ -34,18 +34,18 @@
 
                                         <MudAutocomplete T="Country" Label="Countries" ValueChanged="@((e)=>CountryChanged(e))"
                                                      SearchFunc="@SearchCountry" Value="SelectedCountry"
-                                                     ResetValueOnEmptyText="true"
+                                                     ResetValueOnEmptyText="true" Strict="false"
                                                      CoerceText="false" CoerceValue="false"
                                                      AdornmentColor="Color.Primary" />
 
                                         <MudTextField @bind-Value="SearchedProfile.City" Label="City" Variant="Variant.Text"></MudTextField>
                                         <MudAutocomplete T="Language" Label="Languages" ValueChanged="@((e)=>LanguageChanged(e))"
-                                                     SearchFunc="@SearchLanguage" Value="SelectedLanguage"
+                                                     SearchFunc="@SearchLanguage" Value="SelectedLanguage" Strict="false"
                                                      ResetValueOnEmptyText="true"
                                                      CoerceText="false" CoerceValue="false"
                                                      AdornmentColor="Color.Primary" />
                                         <MudAutocomplete T="Activity" Label="Activities" ValueChanged="@((e)=>ActivityChanged(e))"
-                                                     SearchFunc="@SearchActivity" Value="SelectedActivity"
+                                                     SearchFunc="@SearchActivity" Value="SelectedActivity" Strict="false"
                                                      ResetValueOnEmptyText="true"
                                                      CoerceText="false" CoerceValue="false"
                                                      AdornmentColor="Color.Primary" />
